Firefox scrollbard styling + Fixing cards responsive distribution

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -132,23 +132,31 @@ h6 {
     box-shadow: 0px 5px 15px 0px var(--shadow-color-soft);
 }
 
-::-webkit-scrollbar {
+/* Works on Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--main-color-transparent) var(--background-transparent);
+}
+
+/* Works on Chrome, Edge, and Safari */
+
+*::-webkit-scrollbar {
     width: 0.6em;
     height: 0.3em;
 }
 
-::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: var(--background-transparent);
 }
 
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     outline: none;
     border-radius: 0.3em;
     cursor: pointer;
     background-color: var(--main-color-transparent);
 }
-::-webkit-scrollbar-thumb:hover {
+*::-webkit-scrollbar-thumb:hover {
     background-color: var(--main-color);
 }
 
