--- a/src/components/Cards/CardsStyles.css
+++ b/src/components/Cards/CardsStyles.css
@@ -175,7 +175,7 @@
 @media only screen and (min-width: 768px) {
 
     .card {
-        height: 300px;
+        height: 320px;
         min-width: calc(((100vw - 60px) / 4) - 14px);
         max-width: calc(((100vw - 60px) / 4) - 14px);
     }
@@ -186,7 +186,7 @@
 @media only screen and (min-width: 992px) {
     
     .card {
-        height: 300px;
+        height: 350px;
         min-width: calc(((100vw - 60px) / 5) - 13px);
         max-width: calc(((100vw - 60px) / 5) - 13px);
     }
